--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   geo-api:
     image: geo-ner-trainer
     working_dir: /app
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000
+    command: ls
     volumes:
       - ./final_model:/app/model
     ports:
